リポジトリのリンクを追加

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
             </tr>
         </table>
     </form>
-
+    <br>
+    
+    <a href="https://github.com/nssuperx/software_engineering_kadai1">このページのリポジトリ</a>
 
     <script type="text/javascript">
         //価格設定
