注意事項を追記

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
     </form>
     <br>
     
+    <hr>
+    <h4>注意事項</h4>
+    <ul>
+    <li>身障者で該当する項目が2つ以上ある場合は、値段の安い方で計算する。</li>
+    <li>60歳以上の場合は在学中か問わず、60歳以上で計算する。</li>
+    <li>中学生以上で学生証を提示できない場合は、大人料金で計算をする。</li>
+    </ul>
+    <hr>
     <a href="https://github.com/nssuperx/software_engineering_kadai1">このページのリポジトリ</a>
 
     <script type="text/javascript">
