--- a/index.html
+++ b/index.html
@@ -19,49 +19,49 @@
             </tr>
             <tr>
                 <td>大人</td>
-                <td align="right" id="price1"></td>
+                <td align="right" class="price"></td>
                 <td><input type="number" name="number1" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="number" name="kenmin1" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="text" name="field1" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr>
                 <td>大学生</td>
-                <td align="right" id="price2"></td>
+                <td align="right" class="price"></td>
                 <td><input type="number" name="number2" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="number" name="kenmin2" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="text" name="field2" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr>
                 <td>高校生・中学生</td>
-                <td align="right" id="price3"></td>
+                <td align="right" class="price"></td>
                 <td><input type="number" name="number3" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="number" name="kenmin3" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="text" name="field3" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr>
                 <td>小学生</td>
-                <td align="right" id="price4"></td>
+                <td align="right" class="price"></td>
                 <td><input type="number" name="number4" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="number" name="kenmin4" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="text" name="field4" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr>
                 <td>幼児</td>
-                <td align="right" id="price5"></td>
+                <td align="right" class="price"></td>
                 <td><input type="number" name="number5" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="number" name="kenmin5" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="text" name="field5" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr>
                 <td>60歳以上</td>
-                <td align="right" id="price6"></td>
+                <td align="right" class="price"></td>
                 <td><input type="number" name="number6" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="number" name="kenmin6" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="text" name="field6" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr>
                 <td>身障者</td>
-                <td align="right" id="price7"></td>
+                <td align="right" class="price"></td>
                 <td><input type="number" name="number7" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="number" name="kenmin7" onChange="calc()" min="0" step="1" value="0"></td>
                 <td><input type="text" name="field7" size="8" value="0" readonly="readonly"> 円</td>
@@ -86,7 +86,7 @@
     <hr>
     <a href="https://github.com/nssuperx/software_engineering_kadai1">このページのリポジトリ</a>
 
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="maclass.js"></script>
 </body>
 
 </html>
