--- a/index.html
+++ b/index.html
@@ -20,51 +20,51 @@
             <tr class="calctable">
                 <td>大人</td>
                 <td align="right" class="price"></td>
-                <td><input type="number" name="number" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="number" name="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="text" name="field" size="8" value="0" readonly="readonly"> 円</td>
+                <td><input type="number" class="number" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="number" class="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="text" class="field" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr class="calctable">
                 <td>大学生</td>
                 <td align="right" class="price"></td>
-                <td><input type="number" name="number" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="number" name="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="text" name="field" size="8" value="0" readonly="readonly"> 円</td>
+                <td><input type="number" class="number" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="number" class="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="text" class="field" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr class="calctable">
                 <td>高校生・中学生</td>
                 <td align="right" class="price"></td>
-                <td><input type="number" name="number" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="number" name="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="text" name="field" size="8" value="0" readonly="readonly"> 円</td>
+                <td><input type="number" class="number" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="number" class="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="text" class="field" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr class="calctable">
                 <td>小学生</td>
                 <td align="right" class="price"></td>
-                <td><input type="number" name="number" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="number" name="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="text" name="field" size="8" value="0" readonly="readonly"> 円</td>
+                <td><input type="number" class="number" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="number" class="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="text" class="field" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr class="calctable">
                 <td>幼児</td>
                 <td align="right" class="price"></td>
-                <td><input type="number" name="number" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="number" name="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="text" name="field" size="8" value="0" readonly="readonly"> 円</td>
+                <td><input type="number" class="number" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="number" class="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="text" class="field" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr class="calctable">
                 <td>60歳以上</td>
                 <td align="right" class="price"></td>
-                <td><input type="number" name="number" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="number" name="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="text" name="field" size="8" value="0" readonly="readonly"> 円</td>
+                <td><input type="number" class="number" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="number" class="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="text" class="field" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr class="calctable">
                 <td>身障者</td>
                 <td align="right" class="price"></td>
-                <td><input type="number" name="number" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="number" name="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
-                <td><input type="text" name="field" size="8" value="0" readonly="readonly"> 円</td>
+                <td><input type="number" class="number" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="number" class="kenmin" onChange="calc()" min="0" step="1" value="0"></td>
+                <td><input type="text" class="field" size="8" value="0" readonly="readonly"> 円</td>
             </tr>
             <tr>
                 <td>団体（10人以上であるか）</td>
